src/internal/vm/snapshots/hebi__internal__vm__tests__list_indexing_positive.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
[0, 1, 2][1]


# Result:
Int(
    1,
)
