src/internal/vm/snapshots/hebi__internal__vm__tests__list_indexing_zero.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
[0, 1, 2][0]


# Result:
Int(
    0,
)
