src/internal/vm/snapshots/hebi__internal__vm__tests__logical_and_expr_return_lhs.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
false && "b"


# Result:
Bool(
    false,
)
