src/internal/vm/snapshots/hebi__internal__vm__tests__logical_and_expr_return_rhs.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
"a" && "b"


# Result:
Object(
    "b",
)
