src/internal/vm/snapshots/hebi__internal__vm__tests__make_fn.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
fn test():
  return "yo"

test


# Result:
Object(
    Function {
        descriptor: FunctionDescriptor {
            name: "test",
            params: Params {
                has_self: false,
                min: 0,
                max: 0,
            },
            upvalues: RefCell {
                value: [],
            },
            frame_size: 1,
            instructions: 5,
            constants: 1,
        },
        upvalues: [],
        module_id: ModuleId(
            None,
        ),
    },
)
