src/internal/vm/snapshots/hebi__internal__vm__tests__make_fn_with_args.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
fn test(v):
  return v

test


# Result:
Object(
    Function {
        descriptor: FunctionDescriptor {
            name: "test",
            params: Params {
                has_self: false,
                min: 1,
                max: 1,
            },
            upvalues: RefCell {
                value: [],
            },
            frame_size: 2,
            instructions: 5,
            constants: 0,
        },
        upvalues: [],
        module_id: ModuleId(
            None,
        ),
    },
)
